# rust-snappy

./: .travis.yml  Cargo.toml  README.md  pkg.rs  snappy.rc  snappy.rs
snappy-sys/: Cargo.toml  build.rs
src/: lib.rs
