[package]
name = "snappy"
version = "0.3.0"
authors = ["Daniel Micay <danielmicay@gmail.com>", "Jeff Belgum <jeffbelgum@gmail.com>"]
license = "MIT"
repository = "https://github.com/JeffBelgum/rust-snappy"
documentation = "https://jeffbelgum.github.io/snappy/snappy/"
homepage = "https://github.com/JeffBelgum/rust-snappy"
description = "Rust bindings to the Google compression library 'snappy'"

[dependencies]
libc = "0.2"
